--- a/config/openiotsdk/CMakeLists.txt
+++ b/config/openiotsdk/CMakeLists.txt
@@ -231,8 +231,8 @@ chip_gn_arg_string("openiotsdk_cxx"                       ${CMAKE_CXX_COMPILER})
 chip_gn_arg_string("chip_project_config_include"          "${CHIP_PROJECT_CONFIG}")
 chip_gn_arg_string("chip_system_project_config_include"   "${CHIP_PROJECT_CONFIG}")
 chip_gn_arg_bool  ("is_debug"                             CONFIG_DEBUG)
-chip_gn_arg_bool  ("chip_build_tests"                     CONFIG_CHIP_BUILD_TESTS)
-chip_gn_arg_bool  ("chip_monolithic_tests"                CONFIG_CHIP_BUILD_TESTS)
+chip_gn_arg_bool  ("chip_build_tests"                     CONFIG_CHIP_LIB_TESTS)
+chip_gn_arg_bool  ("chip_monolithic_tests"                CONFIG_CHIP_LIB_TESTS)
 chip_gn_arg_bool  ("chip_build_libshell"                  CONFIG_CHIP_LIB_SHELL)
 if (TARGET cmsis-rtos-api)
     chip_gn_arg_string("target_os"                        "cmsis-rtos")
