Add Open IoT SDK unit-tests application
Simple unit-tests runner
Add unit-tests app to build script
Add unit-tests app to VScode build task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -336,7 +336,7 @@
             "type": "pickString",
             "id": "openiotsdkApp",
             "description": "What Open IoT SDK application do you want to use?",
-            "options": ["shell"],
+            "options": ["shell", "unit-tests"],
             "default": "shell"
         },
         {
