--- a/scripts/idl/tests/available_tests.yaml
+++ b/scripts/idl/tests/available_tests.yaml
@@ -34,3 +34,16 @@ java:
     inputs/optional_argument.matter:
         jni/MyClusterClient-ReadImpl.cpp: outputs/optional_argument/jni/MyClusterClient-ReadImpl.cpp
         jni/MyClusterClient-InvokeSubscribeImpl.cpp: outputs/optional_argument/jni/MyClusterClient-InvokeSubscribeImpl.cpp
+
+cpp:
+    inputs/simple_attribute.matter:
+        cpp/BridgeClustersImpl.h: outputs/simple_attribute/cpp/BridgeClustersImpl.h
+
+    inputs/global_struct_attribute.matter:
+        cpp/BridgeClustersImpl.h: outputs/global_struct_attribute/cpp/BridgeClustersImpl.h
+
+    inputs/cluster_struct_attribute.matter:
+        cpp/BridgeClustersImpl.h: outputs/cluster_struct_attribute/cpp/BridgeClustersImpl.h
+
+    inputs/several_clusters.matter:
+        cpp/BridgeClustersImpl.h: outputs/several_clusters/cpp/BridgeClustersImpl.h
