Revert "Update Infineon CYW30739 TE8 fixes. (#18733)"
This reverts commit 131b13c8b5ccb49585069c743b530310301deddd.

git submodule fetch issues:

fatal: remote error: upload-pack: not our ref ab7601a74bdffc7374353c1e19b22388bb3dcedd
fatal: Fetched in submodule path 'third_party/cyw30739_sdk/repos/30739A0', but it did not contain ab7601a74bdffc7374353c1e19b22388bb3dcedd. Direct fetching of that commit failed.

--- a/examples/lighting-app/cyw30739/BUILD.gn
+++ b/examples/lighting-app/cyw30739/BUILD.gn
@@ -20,7 +20,6 @@ import("${cyw30739_sdk_build_root}/cyw30739_executable.gni")
 import("${cyw30739_sdk_build_root}/cyw30739_sdk.gni")
 
 cyw30739_project_dir = "${chip_root}/examples/lighting-app/cyw30739"
-examples_plat_dir = "${chip_root}/examples/platform/cyw30739"
 
 declare_args() {
   setupPinCode = 20202021
@@ -30,10 +29,7 @@ declare_args() {
 cyw30739_sdk("sdk") {
   sources = [ "${cyw30739_project_dir}/include/CHIPProjectConfig.h" ]
 
-  include_dirs = [
-    "${cyw30739_project_dir}/include",
-    "${examples_plat_dir}",
-  ]
+  include_dirs = [ "${cyw30739_project_dir}/include" ]
 
   defines = [
     "CHIP_DEVICE_CONFIG_USE_TEST_SETUP_PIN_CODE=${setupPinCode}",
@@ -60,13 +56,6 @@ cyw30739_executable("lighting_app") {
   ]
 
   include_dirs = [ "include" ]
-
-  if (chip_enable_ota_requestor) {
-    sources += [
-      "${examples_plat_dir}/OTAConfig.cpp",
-      "${examples_plat_dir}/OTAConfig.h",
-    ]
-  }
 }
 
 group("cyw30739") {
