--- a/examples/lock-app/cyw30739/BUILD.gn
+++ b/examples/lock-app/cyw30739/BUILD.gn
@@ -20,7 +20,6 @@ import("${cyw30739_sdk_build_root}/cyw30739_executable.gni")
 import("${cyw30739_sdk_build_root}/cyw30739_sdk.gni")
 
 cyw30739_project_dir = "${chip_root}/examples/lock-app/cyw30739"
-examples_plat_dir = "${chip_root}/examples/platform/cyw30739"
 
 declare_args() {
   setupPinCode = 20202021
@@ -30,10 +29,7 @@ declare_args() {
 cyw30739_sdk("sdk") {
   sources = [ "${cyw30739_project_dir}/include/CHIPProjectConfig.h" ]
 
-  include_dirs = [
-    "${cyw30739_project_dir}/include",
-    "${examples_plat_dir}",
-  ]
+  include_dirs = [ "${cyw30739_project_dir}/include" ]
 
   defines = [
     "CHIP_DEVICE_CONFIG_USE_TEST_SETUP_PIN_CODE=${setupPinCode}",
@@ -46,8 +42,8 @@ cyw30739_executable("lock_app") {
 
   sources = [
     "src/AppShellCommands.cpp",
+    "src/BoltLockManager.cpp",
     "src/ButtonHandler.cpp",
-    "src/LockManager.cpp",
     "src/ZclCallbacks.cpp",
     "src/main.cpp",
   ]
@@ -57,16 +53,10 @@ cyw30739_executable("lock_app") {
     "${chip_root}/examples/lock-app/lock-common",
     "${chip_root}/examples/shell/shell_common:shell_common",
     "${chip_root}/src/lib",
+    "${chip_root}/third_party/openthread/repo:libopenthread-ftd",
   ]
 
   include_dirs = [ "include" ]
-
-  if (chip_enable_ota_requestor) {
-    sources += [
-      "${examples_plat_dir}/OTAConfig.cpp",
-      "${examples_plat_dir}/OTAConfig.h",
-    ]
-  }
 }
 
 group("cyw30739") {
