--- a/src/app/tests/suites/certification/Test_TC_DD_3_11.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DD_3_11.yaml
@@ -44,6 +44,17 @@ tests:
           [1651101335.734598][22353:22353] CHIP:SVR: SetupQRCode: [MT:-24J042C00KA0648G00]
           [1651101335.735182][22353:22353] CHIP:SVR: Copy/paste the below URL in a browser to see the QR Code:
           [1651101335.735618][22353:22353] CHIP:SVR: https://dhrishi.github.io/connectedhomeip/qrcode.html?data=MT%3A-24J042C00KA0648G00
+
+
+          ubuntu@ubuntu:~/apps$ ./chip-tool payload parse-setup-payload MT:-24J0YXE00KA0648G00
+          [1653562354.037031][4312:4312] CHIP:SPL: Parsing base38Representation: MT:-24J0YXE00KA0648G00
+          [1653562354.037218][4312:4312] CHIP:SPL: Version:       0
+          [1653562354.037243][4312:4312] CHIP:SPL: VendorID:      65521
+          [1653562354.037263][4312:4312] CHIP:SPL: ProductID:     32769
+          [1653562354.037283][4312:4312] CHIP:SPL: Custom flow:   2    (CUSTOM)
+          [1653562354.037337][4312:4312] CHIP:SPL: Capabilities:  0x02 (BLE)
+          [1653562354.037359][4312:4312] CHIP:SPL: Discriminator: 3840
+          [1653562354.037378][4312:4312] CHIP:SPL: Passcode:      20202021
       disabled: true
 
     - label:
@@ -63,7 +74,7 @@ tests:
           [1651101510.975272][22353:22353] CHIP:SVR: Commissioning completed successfully
           [1651101510.975318][22353:22353] CHIP:DIS: Updating services using commissioning mode 0
 
-          DUT Commissioner:
+          DUT Commissioner: 
           $ ./out/chip-tool/chip-tool pairing qrcode 1  MT:-24J042C00KA0648G00
 
           [1651101510810] [94338:65557180] CHIP: [CTL] Received CommissioningComplete response
@@ -94,6 +105,18 @@ tests:
           [1651105420.610886][27312:27312] CHIP:DL:   Device Type: 65535 (0xFFFF)
           [1651105420.610907][27312:27312] CHIP:-: ==== Onboarding payload for Standard Commissioning Flow ====
           [1651105420.610962][27312:27312] CHIP:SVR: SetupQRCode: [MT:-24J0AFN00KA0648G00]
+
+
+          ubuntu@ubuntu:~/may30_cntrl/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool payload parse-setup-payload MT:-24J0AFN00KA0648G00
+          [1653998998.287050][2941:2941] CHIP:SPL: Parsing base38Representation: MT:-24J0AFN00KA0648G00
+          [1653998998.287266][2941:2941] CHIP:SPL: Version:       0
+          [1653998998.287293][2941:2941] CHIP:SPL: VendorID:      65521
+          [1653998998.287313][2941:2941] CHIP:SPL: ProductID:     32769
+          [1653998998.287332][2941:2941] CHIP:SPL: Custom flow:   0    (STANDARD)
+          [1653998998.287354][2941:2941] CHIP:SPL: Capabilities:  0x04 (On IP network)
+          [1653998998.287374][2941:2941] CHIP:SPL: Discriminator: 3840
+          [1653998998.287394][2941:2941] CHIP:SPL: Passcode:      20202021
+          ubuntu@ubuntu:~/may30_cntrl/connectedhomeip/examples/chip-tool/out/debug$
       disabled: true
 
     - label:
@@ -113,7 +136,7 @@ tests:
           [1651105530.973166][27371:27371] CHIP:SVR: Commissioning completed successfully
           [1651105530.973215][27371:27371] CHIP:DIS: Updating services using commissioning mode 0
 
-          DUT Commissioner:
+          DUT Commissioner: 
           $ ./out/chip-tool/chip-tool pairing qrcode 1 MT:-24J0AFN00KA0648G00
 
           [1651105530854] [95067:65607294] CHIP: [CTL] Received CommissioningComplete response
