[Latch] For Matter SDK bridge, support Wi-Fi without needing Thread (#18782)

--- a/src/platform/Linux/BUILD.gn
+++ b/src/platform/Linux/BUILD.gn
@@ -63,7 +63,6 @@ static_library("Linux") {
     "Logging.cpp",
     "NetworkCommissioningDriver.h",
     "NetworkCommissioningEthernetDriver.cpp",
-    "NetworkCommissioningThreadDriver.cpp",
     "NetworkCommissioningWiFiDriver.cpp",
     "PlatformManagerImpl.cpp",
     "PlatformManagerImpl.h",
@@ -81,6 +80,12 @@ static_library("Linux") {
     "bluez/MainLoop.h",
     "bluez/Types.h",
   ]
+
+  if (chip_enable_openthread) {
+    sources += [
+      "NetworkCommissioningThreadDriver.cpp",
+    ]
+  }
 
   deps = [ "${chip_root}/src/setup_payload" ]
 
@@ -121,6 +126,10 @@ static_library("Linux") {
   }
 
   if (chip_enable_wifi) {
+    sources += [
+      "GlibTypeDeleter.h",
+    ]
+
     public_deps += [ "dbus/wpa" ]
   }
 
