Improve passing targets settings to GN build
Add getting all cmake targets from directory function
Collect all SDK targets from build directories to get all properties
Exclude unnecessary targets and remove duplicated flags

Signed-off-by: ATmobica <artur.tynecki@mobica.com>

--- a/config/openiotsdk/CMakeLists.txt
+++ b/config/openiotsdk/CMakeLists.txt
@@ -97,61 +97,24 @@ endif()
 set(GN_ROOT_TARGET ${CHIP_ROOT}/config/openiotsdk/chip-gn)
 
 # Prepare compiler flags
+# All Open IoT SDK targets
+list(APPEND ALL_SDK_TARGETS)
 
-if (TARGET mdh-reference-platforms-for-arm)
-    get_target_common_compile_flags(CHIP_MDH_ARM_CFLAGS mdh-reference-platforms-for-arm)
-    list(APPEND CHIP_CFLAGS ${CHIP_MDH_ARM_CFLAGS})
-    get_target_common_compile_flags(CHIP_MCU_DRIVER_HAL_CFLAGS mcu-driver-hal)
-    list(APPEND CHIP_CFLAGS ${CHIP_MCU_DRIVER_HAL_CFLAGS}) 
-endif()
+foreach(source_dir ${SDK_SOURCES_BINARY_DIRS})
+    get_all_cmake_targets(SDK_TARGETS ${source_dir})
+    list(APPEND ALL_SDK_TARGETS ${SDK_TARGETS})
+endforeach()
 
-if (TARGET cmsis-rtos-api)
-    get_target_common_compile_flags(CHIP_CMSIS_RTOS_API_CFLAGS cmsis-rtos-api)
-    list(APPEND CHIP_CFLAGS ${CHIP_CMSIS_RTOS_API_CFLAGS})    
-    get_target_common_compile_flags(CHIP_CMSIS_RTOS_CORE_CFLAGS cmsis-core)
-    list(APPEND CHIP_CFLAGS ${CHIP_CMSIS_RTOS_CORE_CFLAGS})
-endif()
+# Exclude unnecessary targets
+list(FILTER ALL_SDK_TARGETS EXCLUDE REGEX "^.*linker.*|.*example.*|.*apps.*|.*doc.*|dist|lib$")
 
-if (TARGET freertos-cmsis-rtos)
-    get_target_common_compile_flags(CHIP_FREERTOS_CMSIS_RTOS_CFLAGS freertos-cmsis-rtos)
-    list(APPEND CHIP_CFLAGS ${CHIP_FREERTOS_CMSIS_RTOS_CFLAGS})
-    get_target_common_compile_flags(CHIP_FREERTOS_KERNEL_CFLAGS freertos-kernel)
-    list(APPEND CHIP_CFLAGS ${CHIP_FREERTOS_KERNEL_CFLAGS})
-endif()
+foreach(target ${ALL_SDK_TARGETS})
+    get_target_common_compile_flags(SDK_TARGET_CFLAGS ${target})
+    list(APPEND CHIP_CFLAGS ${SDK_TARGET_CFLAGS})
+endforeach()
 
-if (TARGET mbedtls)
-    get_target_common_compile_flags(CHIP_MBEDTLS_CFLAGS mbedtls)
-    list(APPEND CHIP_CFLAGS ${CHIP_MBEDTLS_CFLAGS})
-endif()
-
-if (TARGET iotsdk-ip-network-api)
-    get_target_common_compile_flags(CHIP_IP_NETOWORK_CFLAGS iotsdk-ip-network-api)
-    list(APPEND CHIP_CFLAGS ${CHIP_IP_NETOWORK_CFLAGS})
-endif()
-
-if (TARGET lwipcore)
-    get_target_common_compile_flags(CHIP_LWIP_CFLAGS lwipcore)
-    list(APPEND CHIP_CFLAGS ${CHIP_LWIP_CFLAGS})
-endif()
-
-if (TARGET lwip-cmsis-port)
-    get_target_common_compile_flags(CHIP_LWIP_CMSIS_PORT_CFLAGS lwip-cmsis-port)
-    list(APPEND CHIP_CFLAGS ${CHIP_LWIP_CMSIS_PORT_CFLAGS})
-    get_target_common_compile_flags(CHIP_LWIP_OPTS_CFLAGS lwipopts)
-    list(APPEND CHIP_CFLAGS ${CHIP_LWIP_OPTS_CFLAGS})
-    get_target_common_compile_flags(CHIP_LWIP_CMSIS_SYS_CFLAGS lwip-cmsis-sys)
-    list(APPEND CHIP_CFLAGS ${CHIP_LWIP_CMSIS_SYS_CFLAGS})
-endif()
-
-if (TARGET iotsdk-blockdevice)
-    get_target_common_compile_flags(CHIP_STORAGE_BLOCK_DEVICE_CFLAGS iotsdk-blockdevice)
-    list(APPEND CHIP_CFLAGS ${CHIP_STORAGE_BLOCK_DEVICE_CFLAGS})
-endif()
-
-if (TARGET iotsdk-tdbstore)
-    get_target_common_compile_flags(CHIP_STORAGE_KV_STORE_CFLAGS iotsdk-tdbstore)
-    list(APPEND CHIP_CFLAGS ${CHIP_STORAGE_KV_STORE_CFLAGS})
-endif()
+# Remove duplicated flags
+list(REMOVE_DUPLICATES CHIP_CFLAGS)
 
 get_gnu_cpp_standard(CHIP_CFLAGS_CC)
 
