--- a/src/app/tests/suites/certification/Test_TC_CGEN_2_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_CGEN_2_1.yaml
@@ -71,4 +71,5 @@ tests:
       command: "readAttribute"
       attribute: "BasicCommissioningInfo"
       response:
-          value: { FailSafeExpiryLengthSeconds: 60 }
+          value: { FailSafeExpiryLengthSeconds: 60,
+                   MaxCumulativeFailsafeSeconds: 900 }
