[chip-tv-casting-app] Update the TV casting app in order to share more code with chip-tool when it comes to commands parsing

--- a/examples/chip-tool/BUILD.gn
+++ b/examples/chip-tool/BUILD.gn
@@ -30,6 +30,7 @@ config("config") {
   ]
 
   defines = [
+    "CONFIG_USE_LOCAL_STORAGE=${config_use_local_storage}",
     "CONFIG_USE_SEPARATE_EVENTLOOP=${config_use_separate_eventloop}",
     "CONFIG_USE_INTERACTIVE_MODE=${config_use_interactive_mode}",
     "CONFIG_ENABLE_YAML_TESTS=${config_enable_yaml_tests}",
