--- a/src/app/tests/suites/certification/Test_TC_DGGEN_1_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DGGEN_1_1.yaml
@@ -13,11 +13,11 @@
 # limitations under the License.
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
-name: 84.1.1. [TC-DESC-1.1] Descriptor Cluster Attributes with DUT as Server
+name: 85.1.1. [TC-DGGEN-1.1] Global attributes with server as DUT
 
 config:
     nodeId: 0x12344321
-    cluster: "Descriptor"
+    cluster: "General Diagnostics"
     endpoint: 0
 
 tests:
@@ -49,7 +49,7 @@ tests:
       command: "readAttribute"
       attribute: "AttributeList"
       response:
-          contains: [0, 1, 2, 3, 65528, 65529, 65531, 65532, 65533]
+          contains: [0, 1, 8, 65528, 65529, 65531, 65533]
           constraints:
               type: list
 
@@ -74,7 +74,7 @@ tests:
       command: "readAttribute"
       attribute: "AcceptedCommandList"
       response:
-          value: []
+          value: [0]
           constraints:
               type: list
 
