--- a/src/controller/java/BUILD.gn
+++ b/src/controller/java/BUILD.gn
@@ -84,6 +84,7 @@ android_library("java") {
     "src/chip/devicecontroller/ChipClusterException.java",
     "src/chip/devicecontroller/ChipCommandType.java",
     "src/chip/devicecontroller/ChipDeviceController.java",
+    "src/chip/devicecontroller/ControllerParams.java",
     "src/chip/devicecontroller/ChipDeviceControllerException.java",
     "src/chip/devicecontroller/DiscoveredDevice.java",
     "src/chip/devicecontroller/GetConnectedDeviceCallbackJni.java",
