[nrfconnect] Added factory data accessor implementation.
The nrfconnect uses test values defined in the header
files for the factory data purpose. The data belonging
to factory data should be read from dedicated location
in flash memory.

* Added FactoryDataProvider class that overrides API
to get factory data elements.
* Added FactoryDataParser module that read factory data
partition from flash and parses cbor format to get raw
data.

--- a/src/platform/nrfconnect/args.gni
+++ b/src/platform/nrfconnect/args.gni
@@ -14,4 +14,10 @@
 
 declare_args() {
   chip_malloc_sys_heap = false
+
+  # Enable factory data support
+  chip_enable_factory_data = false
+
+  # Enable user custom backend for factory data
+  chip_enable_factory_data_custom_backend = false
 }
