--- a/examples/pigweed-app/nrfconnect/prj.conf
+++ b/examples/pigweed-app/nrfconnect/prj.conf
@@ -62,3 +62,6 @@ CONFIG_LOG_MODE_MINIMAL=n
 CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_LOG_BACKEND_UART=n
 CONFIG_LOG_BACKEND_RTT=n
+
+# Disable factory data support. 
+CONFIG_CHIP_FACTORY_DATA=n
