--- a/src/platform/nrfconnect/BUILD.gn
+++ b/src/platform/nrfconnect/BUILD.gn
@@ -49,7 +49,18 @@ static_library("nrfconnect") {
     "SystemPlatformConfig.h",
   ]
 
+  public = [ "${chip_root}/src/credentials/DeviceAttestationCredsProvider.h" ]
+
   public_deps = [ "${chip_root}/src/platform:platform_base" ]
+
+  if (chip_enable_factory_data && !chip_enable_factory_data_custom_backend) {
+    sources += [
+       "FactoryDataProvider.cpp",
+       "FactoryDataProvider.h",
+       "FactoryDataParser.c",
+       "FactoryDataParser.h",
+    ]
+  }
 
   if (chip_enable_openthread) {
     sources += [
