--- a/src/platform/nrfconnect/BUILD.gn
+++ b/src/platform/nrfconnect/BUILD.gn
@@ -53,7 +53,7 @@ static_library("nrfconnect") {
 
   public_deps = [ "${chip_root}/src/platform:platform_base" ]
 
-  if (chip_enable_factory_data && !chip_enable_factory_data_custom_backend) {
+  if (chip_enable_factory_data) {
     sources += [
       "FactoryDataParser.c",
       "FactoryDataParser.h",
